# forgeterm

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
config/: agent.toml  forgeterm-handler.desktop  security-rules.toml
crates/agent/: Cargo.toml
crates/agent/src/: alert.rs  audit.rs  config.rs  daemon.rs  ipc.rs  main.rs
crates/agent/src/discovery/: linux.rs  macos.rs  mod.rs
crates/agent/src/governor/: cgroups.rs  macos_enforcer.rs  macos_monitor.rs  mod.rs  monitor.rs  ulimit.rs
crates/agent/src/security/: file_monitor.rs  mod.rs  net_monitor.rs  proc_connector.rs  process_monitor.rs  rules.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  ipc.rs  main.rs  proc_info.rs
crates/cli/src/tui/: mod.rs  render.rs
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  protocol.rs  types.rs
