[package]
name = "forgeterm-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Runtime security monitor daemon for AI coding agents"

[[bin]]
name = "forgeterm-agent"
path = "src/main.rs"

[dependencies]
forgeterm-shared = { path = "../shared" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
nix = { version = "0.29", features = ["process", "signal"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
anyhow = "1"
libc = "0.2"
regex = "1"

[target.'cfg(target_os = "linux")'.dependencies]
inotify = "0.11"

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14"
kqueue = "1"
