[package]
name = "forgeterm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "TUI dashboard for Forgeterm security monitor"

[[bin]]
name = "forgeterm"
path = "src/main.rs"

[dependencies]
forgeterm-shared = { path = "../shared" }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
dirs = "6"
futures = "0.3"
nix = { version = "0.29", features = ["signal"] }
toml = "0.8"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14"
